:shower: Single quotes to double quotes
○○なときは、シングルクオート
✗✗なときは、ダブルクオート
って考えるのが面倒なので常にダブルクオートを使う

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -6,12 +6,12 @@ Style/Documentation:
   Enabled: false
 AllCops:
   Include:
-    - '**/Rakefile'
-    - '**/config.ru'
+    - "**/Rakefile"
+    - "**/config.ru"
   Exclude:
-    - 'db/**/*'
-    - 'config/**/*'
-    - 'script/**/*'
+    - "db/**/*"
+    - "config/**/*"
+    - "script/**/*"
     - "bin/**/*"
     - "Gemfile"
     - "Rakefile"
